crates/gukhanmun-core/tests/snapshots/snapshots__dictionary_match_emits_single_annotation.snap
---
source: crates/gukhanmun-core/tests/snapshots.rs
expression: "common::tokens_to_snapshot_value(&tokens)"
---
[
  {
    "annotated": {
      "first_in_context": true,
      "from_dictionary": true,
      "hanja": "學校",
      "homophone": false,
      "reading": "학교",
      "require_hangul": false,
      "require_hanja": false,
      "skip_annotation": false
    }
  }
]
