crates/gukhanmun-core/tests/snapshots/snapshots__fallback_skips_initial_sound_law_in_ko_kp.snap
---
source: crates/gukhanmun-core/tests/snapshots.rs
expression: "common::tokens_to_snapshot_value(&tokens)"
---
[
  {
    "annotated": {
      "dictionary_hanja": null,
      "first_in_context": true,
      "from_dictionary": false,
      "from_source_gloss": false,
      "hanja": "來日",
      "homophone": false,
      "reading": "래일",
      "require_hangul": false,
      "require_hanja": false,
      "skip_annotation": false
    }
  }
]
