crates/gukhanmun-core/tests/snapshots/snapshots__homophone_marker_flags_shared_reading.snap
---
source: crates/gukhanmun-core/tests/snapshots.rs
expression: "common::tokens_to_snapshot_value(&marked)"
---
[
  {
    "annotated": {
      "first_in_context": true,
      "from_dictionary": true,
      "hanja": "天地",
      "homophone": true,
      "reading": "천지",
      "require_hangul": false,
      "require_hanja": false,
      "skip_annotation": false
    }
  }
]
