crates/gukhanmun-core/tests/snapshots/snapshots__mixed_script_dictionary_entry_covers_hangul_suffix.snap
---
source: crates/gukhanmun-core/tests/snapshots.rs
expression: "common::tokens_to_snapshot_value(&tokens)"
---
[
  {
    "annotated": {
      "first_in_context": true,
      "from_dictionary": true,
      "hanja": "色깔論",
      "homophone": false,
      "reading": "색깔론",
      "require_hangul": false,
      "require_hanja": false,
      "skip_annotation": false
    }
  }
]
