crates/gukhanmun-core/tests/snapshots/snapshots__single_char_fallback_uses_unihan_reading.snap
---
source: crates/gukhanmun-core/tests/snapshots.rs
expression: "common::tokens_to_snapshot_value(&tokens)"
---
[
  {
    "annotated": {
      "first_in_context": true,
      "from_dictionary": false,
      "hanja": "學",
      "homophone": false,
      "reading": "학",
      "require_hangul": false,
      "require_hanja": false,
      "skip_annotation": false
    }
  }
]
