crates/gukhanmun-core/tests/snapshots/snapshots__trivial_dictionary_merges_with_fallback.snap
---
source: crates/gukhanmun-core/tests/snapshots.rs
expression: "common::tokens_to_snapshot_value(&tokens)"
---
[
  {
    "annotated": {
      "dictionary_hanja": "洪民憙",
      "first_in_context": true,
      "from_dictionary": true,
      "from_source_gloss": false,
      "hanja": "洪民憙",
      "homophone": false,
      "reading": "홍민희",
      "require_hangul": false,
      "require_hanja": false,
      "skip_annotation": false
    }
  }
]
